# myDjangoapp

./: README.md
Project/: db.sqlite3  manage.py  pyproject.toml
Project/oracles/: admin.py  forms.py  models.py  urls.py  views.py
Project/oracles/management/commands/: add_question.py  import_question.py
Project/oracles/migrations/: 0001_initial.py  0004_oracleanswer_roll_value.py  0005_remove_oraclequestion_pub_date_and_more.py  0006_oraclequestion_description.py  0007_alter_oracleanswer_roll_value.py  0008_oraclequestion_die.py
Project/oracles/repository/: Architecture.json  NPC_Appearences_Mannerisms.json
Project/oracles/repository/standardTemplate/: data_template.json
Project/oracles/static/oracles/css/: styles.css
Project/oracles/templates/admin/: change_category.html
Project/oracles/templates/oracles/: category.html  detail.html  index-category.html  index.html
Project/simpleGMe/: asgi.py  settings.py  urls.py  views.py  wsgi.py
Project/simpleGMe/templates/simpleGMe/: landing-page.html
myDjangoapp/Project/: Dockerfile  db.sqlite3  pyproject.toml
myDjangoapp/Project/oracles/: admin.py  apps.py  models.py  urls.py
myDjangoapp/Project/oracles/migrations/: 0002_rename_sixoraclechoices_oracleanswers.py  0003_rename_oracleanswers_oracleanswer.py
myDjangoapp/Project/oracles/templates/oracles/: detail.html  index.html
myDjangoapp/Project/simpleGMe/: settings.py
