[tool.poetry]
name = "djangoapp"
version = "0.4.0"
description = "A Django app created for learning purposes"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
